emg_layout/src/snapshots/emg_layout__animation__tests__updated_end_1.snap
---
source: emg_layout/src/animation.rs
expression: "&a"

---
AnimationEdge {
    inside: AnimationInside {
        steps: StateVar(
            [
                _Step,
            ],
        ),
        interruption: StateVar(
            [],
        ),
        props: StateVar(
            [
                Prop(
                    "opacity",
                    Motion {
                        position: NotNan(
                            0.9984870140457791,
                        ),
                        velocity: NotNan(
                            0.01456647065794588,
                        ),
                        target: NotNan(
                            1.0,
                        ),
                        interpolation: Spring {
                            stiffness: NotNan(
                                170.0,
                            ),
                            damping: NotNan(
                                26.0,
                            ),
                        },
                        unit: None,
                        interpolation_override: None,
                    },
                ),
            ],
        ),
    },
    timing: StateAnchor(
        Timing {
            current: 1.584s,
            dt: 16ms,
        },
    ),
    running: StateAnchor(
        true,
    ),
    queued_interruptions: StateAnchor(
        [],
    ),
    revised_steps: StateAnchor(
        [
            _Step,
        ],
    ),
    revised_props: StateAnchor(
        [
            Prop(
                "opacity",
                Motion {
                    position: NotNan(
                        0.9984870140457791,
                    ),
                    velocity: NotNan(
                        0.01456647065794588,
                    ),
                    target: NotNan(
                        1.0,
                    ),
                    interpolation: Spring {
                        stiffness: NotNan(
                            170.0,
                        ),
                        damping: NotNan(
                            26.0,
                        ),
                    },
                    unit: None,
                    interpolation_override: None,
                },
            ),
        ],
    ),
    send_messages: StateAnchor(
        [],
    ),
}
